--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.log filter=lfs diff=lfs merge=lfs -text
 *.srt filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
+DatasetTransformation/output/str/** filter=lfs diff=lfs merge=lfs -text
